--- a/customer.html
+++ b/customer.html
@@ -1,37 +1,237 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <!-- Same Head -->
     <title>My Account | Tassel</title>
     <link rel="stylesheet" href="styles.css">
-    <!-- ... same styles ... -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <style>
+        body {
+            margin: 0;
+            display: flex;
+            height: 100vh;
+            font-family: 'Montserrat', sans-serif;
+            background: #F5F1E8;
+        }
+
+        .dash-sidebar {
+            width: 250px;
+            background: #6B5D52;
+            color: white;
+            display: flex;
+            flex-direction: column;
+        }
+
+        .dash-logo {
+            padding: 2rem 1rem;
+            font-size: 1.5rem;
+            font-weight: 700;
+            text-align: center;
+            color: #E8B4C8;
+        }
+
+        .dash-nav {
+            list-style: none;
+            padding: 1rem;
+            flex-grow: 1;
+        }
+
+        .dash-nav a {
+            color: #ddd;
+            text-decoration: none;
+            display: flex;
+            align-items: center;
+            gap: 12px;
+            padding: 12px;
+            border-radius: 8px;
+            transition: 0.2s;
+        }
+
+        .dash-nav a:hover,
+        .dash-nav a.active {
+            background: rgba(255, 255, 255, 0.15);
+            color: white;
+        }
+
+        .dash-main {
+            flex: 1;
+            padding: 2rem;
+            overflow-y: auto;
+        }
+
+        .welcome-banner {
+            background: white;
+            padding: 2rem;
+            border-radius: 15px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.05);
+            margin-bottom: 2rem;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .welcome-text h1 {
+            margin: 0;
+            color: #6B5D52;
+        }
+
+        .welcome-text p {
+            color: #888;
+        }
+
+        .stats-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 1.5rem;
+            margin-bottom: 2rem;
+        }
+
+        .stat-card {
+            background: white;
+            padding: 1.5rem;
+            border-radius: 12px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+            text-align: center;
+            border-top: 4px solid #E8B4C8;
+        }
+
+        .stat-card h3 {
+            margin: 0;
+            color: #888;
+            font-size: 0.9rem;
+        }
+
+        .stat-card p {
+            margin: 10px 0 0;
+            font-size: 2rem;
+            font-weight: 700;
+            color: #4A4139;
+        }
+
+        .content-box {
+            background: white;
+            border-radius: 12px;
+            padding: 1.5rem;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+        }
+
+        .box-header {
+            margin-bottom: 1rem;
+            border-bottom: 1px solid #eee;
+            padding-bottom: 0.5rem;
+        }
+
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+
+        th,
+        td {
+            padding: 12px;
+            text-align: left;
+            border-bottom: 1px solid #eee;
+        }
+    </style>
 </head>
+
 <body>
     <aside class="dash-sidebar">
         <div class="dash-logo">MY TASSEL</div>
         <nav>
             <ul class="dash-nav">
-                <li><a href="#" class="active"><i class="fas fa-history"></i> My Bookings</a></li>
-                <li><a href="index.html#services"><i class="fas fa-plus-circle"></i> New Booking</a></li>
+                <li><a href="#" class="active"><i class="fas fa-home"></i> Dashboard</a></li>
+                <li><a href="index.html#services"><i class="fas fa-plus-circle"></i> Book Appointment</a></li>
+                <li><a href="#" onclick="openProfileModal()"><i class="fas fa-user-circle"></i> My Profile</a></li>
                 <li><a href="#" id="logout-btn"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
             </ul>
         </nav>
     </aside>
 
     <main class="dash-main">
-        <header class="dash-header">
-            <h1>My Profile</h1>
-            <div>Welcome back, <strong id="user-name">Guest</strong></div>
-        </header>
-
-        <section class="dash-cards">
-            <div class="dash-card">
-                <h3>Upcoming Appointment</h3>
-                <p>You have no upcoming appointments.</p>
-                <a href="index.html#services" class="btn btn-primary" style="margin-top:1rem">Book Now</a>
+        <div class="welcome-banner">
+            <div class="welcome-text">
+                <h1>Hello, <span id="user-name">Guest</span>!</h1>
+                <p>Ready to look beautiful today?</p>
             </div>
-        </section>
+            <a href="index.html#services" class="btn btn-primary"
+                style="text-decoration:none; padding: 12px 25px; background: #E8B4C8; color: white; border-radius: 30px;">
+                Book Now <i class="fas fa-arrow-right"></i>
+            </a>
+        </div>
+
+        <div class="stats-grid">
+            <div class="stat-card">
+                <h3>Total Visits</h3>
+                <p id="stat-visits">0</p>
+            </div>
+            <div class="stat-card">
+                <h3>Next Appointment</h3>
+                <p id="stat-next">N/A</p>
+            </div>
+            <div class="stat-card">
+                <h3>Reward Points</h3>
+                <p>150</p>
+            </div>
+        </div>
+
+        <div class="content-box">
+            <div class="box-header">
+                <h3>My Booking History</h3>
+            </div>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Service</th>
+                        <th>Date</th>
+                        <th>Time</th>
+                        <th>Status</th>
+                    </tr>
+                </thead>
+                <tbody id="appointments-table"></tbody>
+            </table>
+        </div>
     </main>
+
+    <!-- Universal Profile Modal -->
+    <div id="profile-modal" class="modal"
+        style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.5); z-index:1000; justify-content:center; align-items:center;">
+        <div class="modal-content"
+            style="background:white; padding:2rem; border-radius:10px; width:450px; position:relative;">
+            <button onclick="closeProfileModal()"
+                style="position:absolute; top:10px; right:15px; border:none; background:none; font-size:1.5rem; cursor:pointer;">&times;</button>
+            <h2 style="margin-bottom:1.5rem; color:#6B5D52;">My Profile</h2>
+            <form id="profile-form">
+                <div class="form-group" style="margin-bottom:1rem;">
+                    <label>Full Name</label>
+                    <input type="text" id="profile-name" class="form-control"
+                        style="width:100%; padding:8px; border:1px solid #ddd; border-radius:4px;">
+                </div>
+                <div class="form-group" style="margin-bottom:1rem;">
+                    <label>Email Address</label>
+                    <input type="email" id="profile-email" class="form-control"
+                        style="width:100%; padding:8px; border:1px solid #ddd; border-radius:4px;">
+                </div>
+                <hr style="margin:1.5rem 0; border:0; border-top:1px solid #eee;">
+                <p style="font-size:0.9rem; color:#888; margin-bottom:1rem;">Leave password fields blank to keep current
+                    password</p>
+                <div class="form-group" style="margin-bottom:1rem;">
+                    <label>New Password</label>
+                    <input type="password" id="profile-pass" class="form-control" placeholder="Enter new password"
+                        style="width:100%; padding:8px; border:1px solid #ddd; border-radius:4px;">
+                </div>
+                <div class="form-group" style="margin-bottom:1rem;">
+                    <label>Confirm New Password</label>
+                    <input type="password" id="profile-pass-confirm" class="form-control"
+                        placeholder="Confirm new password"
+                        style="width:100%; padding:8px; border:1px solid #ddd; border-radius:4px;">
+                </div>
+                <button type="submit" class="btn btn-primary btn-block"
+                    style="padding:10px; width:100%; background:#E8B4C8; border:none; color:white; border-radius:4px;">Update
+                    Profile</button>
+            </form>
+        </div>
+    </div>
+
     <script src="dashboard.js"></script>
 </body>
-</html>
