--- a/staff.html
+++ b/staff.html
@@ -111,18 +111,19 @@
             text-align: left;
             border-bottom: 1px solid #eee;
         }
-        
+
         /* Modal Styles */
         .modal {
-            display:none; 
-            position:fixed; 
-            top:0; left:0; 
-            width:100%; 
-            height:100%; 
-            background:rgba(0,0,0,0.5); 
-            z-index:1000; 
-            justify-content:center; 
-            align-items:center;
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
+            z-index: 1000;
+            justify-content: center;
+            align-items: center;
         }
     </style>
 </head>
@@ -208,7 +209,7 @@
                 </form>
             </div>
         </section>
-        
+
         <!-- Universal Profile Modal -->
         <div id="profile-modal" class="modal">
             <div class="modal-content"
