--- a/customer.html
+++ b/customer.html
@@ -132,18 +132,19 @@
             text-align: left;
             border-bottom: 1px solid #eee;
         }
-        
+
         /* Modal Styles */
         .modal {
-            display:none; 
-            position:fixed; 
-            top:0; left:0; 
-            width:100%; 
-            height:100%; 
-            background:rgba(0,0,0,0.5); 
-            z-index:1000; 
-            justify-content:center; 
-            align-items:center;
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
+            z-index: 1000;
+            justify-content: center;
+            align-items: center;
         }
     </style>
 </head>
@@ -204,7 +205,7 @@
                 <tbody id="appointments-table"></tbody>
             </table>
         </div>
-        
+
         <!-- Universal Profile Modal -->
         <div id="profile-modal" class="modal">
             <div class="modal-content"
@@ -224,7 +225,8 @@
                             style="width:100%; padding:8px; border:1px solid #ddd; border-radius:4px;">
                     </div>
                     <hr style="margin:1.5rem 0; border:0; border-top:1px solid #eee;">
-                    <p style="font-size:0.9rem; color:#888; margin-bottom:1rem;">Leave password fields blank to keep current
+                    <p style="font-size:0.9rem; color:#888; margin-bottom:1rem;">Leave password fields blank to keep
+                        current
                         password</p>
                     <div class="form-group" style="margin-bottom:1rem;">
                         <label>New Password</label>
